--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <a href="./public/about.html" alt="mandy">
-    <img src="./assets/images/mandy_3268.jpg" alt="Mandy" style="width: 200px; height: 200px; border-radius: 50%;">
+    <img src="./assets/images/mandy_3268.jpg" alt="Mandy" style="width: 200px; height: 220px; border-radius: 50%;">
 
   </a>
   <hr />
@@ -22,9 +22,9 @@
     <img src="./assets/images/movie-ranking.png" alt="movieranking project preview" style="width: 240px; height: 200px;">
   </a>
 
-  <a href="../4.0 File Paths/Folder0/index.html" alt="Animals List Preview">
+  <a href="./public/animals.html" alt="Animals List Preview">
     <h3>2-Animals List</h3>
-    <img src="../4.0 File Paths/Folder0/goal.png" alt="animals list project preview" style="width: 120px; height: 420px;">
+    <img src="./assets/images/animals-list.png" alt="animals list project preview" style="width: 120px; height: 220px;">
 
 
     <a href="./public/birthday-invite.html">
