--- a/public/about.html
+++ b/public/about.html
@@ -8,3 +8,5 @@
 <p>As a professional educator, I've created my own online English course, and I've helped over 200 students to achieve their goals with my favorite language of all times. However, the more the business grew, the more I felt like I was much more curious about how I could create my own website than to just use a done template. I found myself more curious about what's behind the scenes of the various websites and videos that I use - I'm still teaching - with my students.</p>
 
 <p>I'm 27 years old, and someimes I feel like it's kinda late to start a brand new career. However, I'm very adventures and curious, I'm dedicated, and I'm eager to learn more and more. I'm very grateful for all of the experiences I've had and within the Education field, as well as for my current students, but I can't wait to complete this transition. I see myself always being a teacher! Perhaps I see myself teaching as a developer one day, who knows... May the journey begin!</p>
+<hr />
+<a href="../index.html">Back to Home</a>
