--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <h1>Welcome to Mandy's Website!</h1>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Mandy's1stWebpage</title>
 </head>
 
 <body>
